// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UseBiometry Screen Renders correctly when biometry available 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "left",
      "right",
      "bottom",
    ]
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#000000",
        "height": "100%",
        "padding": 20,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
          }
        }
      >
        <
          style={
            Array [
              Object {
                "marginBottom": 66,
                "minHeight": 200,
                "minWidth": 200,
              },
            ]
          }
        />
      </View>
      <View>
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
            ]
          }
        >
          Biometry.EnabledText1
        </Text>
        <Text />
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
            ]
          }
        >
          Biometry.EnabledText2
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "bold",
                },
              ]
            }
          >
             
            Biometry.Warning
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginVertical": 20,
          }
        }
      >
        <View
          style={
            Object {
              "flexShrink": 1,
              "justifyContent": "center",
              "marginRight": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "bold",
                },
              ]
            }
          >
            Biometry.UseToUnlock
          </Text>
        </View>
        <View
          style={
            Object {
              "justifyContent": "center",
            }
          }
        >
          <RCTSwitch
            accessibilityLabel="Biometry.Toggle"
            accessibilityRole="switch"
            disabled={false}
            onChange={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            onTintColor="rgba(53, 130, 63, 0.35)"
            style={
              Array [
                Object {
                  "height": 31,
                  "width": 51,
                },
                Object {
                  "backgroundColor": "#D3D3D3",
                  "borderRadius": 16,
                },
              ]
            }
            testID="com.ariesbifold:id/ToggleBiometrics"
            thumbTintColor="#606060"
            tintColor="#D3D3D3"
            value={false}
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "margin": 20,
        "marginTop": "auto",
      }
    }
  >
    <View
      accessibilityLabel="Continue"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#42803E",
          "borderRadius": 4,
          "opacity": 1,
          "padding": 16,
        }
      }
      testID="com.ariesbifold:id/Continue"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "bold",
                "textAlign": "center",
              },
              false,
            ]
          }
        >
          Continue
        </Text>
      </View>
    </View>
  </View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  >
    <RNCSafeAreaView>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#000000",
              "height": "100%",
              "padding": 20,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "default": "",
            }
          }
          style={
            Object {
              "alignSelf": "center",
              "height": "33%",
              "marginBottom": 20,
              "resizeMode": "contain",
              "width": "33%",
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              Object {
                "alignSelf": "center",
                "marginBottom": 16,
              },
            ]
          }
        >
          PinEnter.EnterPIN
        </Text>
        <View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  },
                  Object {
                    "marginBottom": 24,
                  },
                ]
              }
            >
              <View
                onLayout={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#313132",
                      "borderColor": "#313132",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "height": 48,
                      "marginRight": 8,
                      "width": 40,
                    },
                    false,
                  ]
                }
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 26,
                        "fontWeight": "bold",
                        "lineHeight": 42,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                onLayout={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#313132",
                      "borderColor": "#313132",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "height": 48,
                      "marginRight": 8,
                      "width": 40,
                    },
                    false,
                  ]
                }
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 26,
                        "fontWeight": "bold",
                        "lineHeight": 42,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                onLayout={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#313132",
                      "borderColor": "#313132",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "height": 48,
                      "marginRight": 8,
                      "width": 40,
                    },
                    false,
                  ]
                }
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 26,
                        "fontWeight": "bold",
                        "lineHeight": 42,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                onLayout={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#313132",
                      "borderColor": "#313132",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "height": 48,
                      "marginRight": 8,
                      "width": 40,
                    },
                    false,
                  ]
                }
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 26,
                        "fontWeight": "bold",
                        "lineHeight": 42,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                onLayout={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#313132",
                      "borderColor": "#313132",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "height": 48,
                      "marginRight": 8,
                      "width": 40,
                    },
                    false,
                  ]
                }
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 26,
                        "fontWeight": "bold",
                        "lineHeight": 42,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                onLayout={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#313132",
                      "borderColor": "#313132",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "height": 48,
                      "marginRight": 8,
                      "width": 40,
                    },
                    false,
                  ]
                }
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 26,
                        "fontWeight": "bold",
                        "lineHeight": 42,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                    ]
                  }
                >
                  
                </Text>
              </View>
              <TextInput
                accessibilityLabel="PinEnter.EnterPIN"
                accessible={true}
                autoCapitalize="characters"
                autoCorrect={false}
                autoFocus={true}
                blurOnSubmit={false}
                caretHidden={true}
                clearButtonMode="never"
                disableFullscreenUI={true}
                keyboardType="numeric"
                maxLength={6}
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                onPressOut={[Function]}
                spellCheck={false}
                style={
                  Object {
                    "bottom": 0,
                    "fontSize": 1,
                    "left": 0,
                    "opacity": 0.01,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                testID="com.ariesbifold:id/EnterPIN"
                textContentType="password"
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
            <View
              accessibilityLabel="PinCreate.Show"
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "marginBottom": 32,
                  "marginRight": 8,
                  "opacity": 1,
                }
              }
              testID="com.ariesbifold:id/Show"
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 30,
                    },
                    undefined,
                    Object {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "margin": 20,
            "marginBottom": 10,
            "marginTop": "auto",
          }
        }
      >
        <View
          accessibilityLabel="PinEnter.Unlock"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#42803E",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/Enter"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                ]
              }
            >
              PinEnter.Unlock
            </Text>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </Modal>
</RNCSafeAreaView>
`;

exports[`UseBiometry Screen Renders correctly when biometry not available 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "left",
      "right",
      "bottom",
    ]
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#000000",
        "height": "100%",
        "padding": 20,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
          }
        }
      >
        <
          style={
            Array [
              Object {
                "marginBottom": 66,
                "minHeight": 200,
                "minWidth": 200,
              },
            ]
          }
        />
      </View>
      <View>
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
            ]
          }
        >
          Biometry.NotEnabledText1
        </Text>
        <Text />
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
            ]
          }
        >
          Biometry.NotEnabledText2
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginVertical": 20,
          }
        }
      >
        <View
          style={
            Object {
              "flexShrink": 1,
              "justifyContent": "center",
              "marginRight": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "bold",
                },
              ]
            }
          >
            Biometry.UseToUnlock
          </Text>
        </View>
        <View
          style={
            Object {
              "justifyContent": "center",
            }
          }
        >
          <RCTSwitch
            accessibilityLabel="Biometry.Toggle"
            accessibilityRole="switch"
            disabled={true}
            onChange={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            onTintColor="rgba(53, 130, 63, 0.35)"
            style={
              Array [
                Object {
                  "height": 31,
                  "width": 51,
                },
                Object {
                  "backgroundColor": "#D3D3D3",
                  "borderRadius": 16,
                },
              ]
            }
            testID="com.ariesbifold:id/ToggleBiometrics"
            thumbTintColor="#606060"
            tintColor="#D3D3D3"
            value={false}
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "margin": 20,
        "marginTop": "auto",
      }
    }
  >
    <View
      accessibilityLabel="Continue"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#42803E",
          "borderRadius": 4,
          "opacity": 1,
          "padding": 16,
        }
      }
      testID="com.ariesbifold:id/Continue"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "bold",
                "textAlign": "center",
              },
              false,
            ]
          }
        >
          Continue
        </Text>
      </View>
    </View>
  </View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  >
    <RNCSafeAreaView>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#000000",
              "height": "100%",
              "padding": 20,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "default": "",
            }
          }
          style={
            Object {
              "alignSelf": "center",
              "height": "33%",
              "marginBottom": 20,
              "resizeMode": "contain",
              "width": "33%",
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              Object {
                "alignSelf": "center",
                "marginBottom": 16,
              },
            ]
          }
        >
          PinEnter.EnterPIN
        </Text>
        <View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  },
                  Object {
                    "marginBottom": 24,
                  },
                ]
              }
            >
              <View
                onLayout={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#313132",
                      "borderColor": "#313132",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "height": 48,
                      "marginRight": 8,
                      "width": 40,
                    },
                    false,
                  ]
                }
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 26,
                        "fontWeight": "bold",
                        "lineHeight": 42,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                onLayout={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#313132",
                      "borderColor": "#313132",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "height": 48,
                      "marginRight": 8,
                      "width": 40,
                    },
                    false,
                  ]
                }
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 26,
                        "fontWeight": "bold",
                        "lineHeight": 42,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                onLayout={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#313132",
                      "borderColor": "#313132",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "height": 48,
                      "marginRight": 8,
                      "width": 40,
                    },
                    false,
                  ]
                }
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 26,
                        "fontWeight": "bold",
                        "lineHeight": 42,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                onLayout={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#313132",
                      "borderColor": "#313132",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "height": 48,
                      "marginRight": 8,
                      "width": 40,
                    },
                    false,
                  ]
                }
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 26,
                        "fontWeight": "bold",
                        "lineHeight": 42,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                onLayout={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#313132",
                      "borderColor": "#313132",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "height": 48,
                      "marginRight": 8,
                      "width": 40,
                    },
                    false,
                  ]
                }
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 26,
                        "fontWeight": "bold",
                        "lineHeight": 42,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                onLayout={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#313132",
                      "borderColor": "#313132",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "height": 48,
                      "marginRight": 8,
                      "width": 40,
                    },
                    false,
                  ]
                }
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 26,
                        "fontWeight": "bold",
                        "lineHeight": 42,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                    ]
                  }
                >
                  
                </Text>
              </View>
              <TextInput
                accessibilityLabel="PinEnter.EnterPIN"
                accessible={true}
                autoCapitalize="characters"
                autoCorrect={false}
                autoFocus={true}
                blurOnSubmit={false}
                caretHidden={true}
                clearButtonMode="never"
                disableFullscreenUI={true}
                keyboardType="numeric"
                maxLength={6}
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                onPressOut={[Function]}
                spellCheck={false}
                style={
                  Object {
                    "bottom": 0,
                    "fontSize": 1,
                    "left": 0,
                    "opacity": 0.01,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                testID="com.ariesbifold:id/EnterPIN"
                textContentType="password"
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
            <View
              accessibilityLabel="PinCreate.Show"
              accessible={true}
              collapsable={false}
              focusable={true}
              nativeID="animatedComponent"
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "marginBottom": 32,
                  "marginRight": 8,
                  "opacity": 1,
                }
              }
              testID="com.ariesbifold:id/Show"
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 30,
                    },
                    undefined,
                    Object {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "margin": 20,
            "marginBottom": 10,
            "marginTop": "auto",
          }
        }
      >
        <View
          accessibilityLabel="PinEnter.Unlock"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#42803E",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/Enter"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                ]
              }
            >
              PinEnter.Unlock
            </Text>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </Modal>
</RNCSafeAreaView>
`;

exports[`UseBiometry Screen Toggles use biometrics ok 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "left",
      "right",
      "bottom",
    ]
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#000000",
        "height": "100%",
        "padding": 20,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
          }
        }
      >
        <
          style={
            Array [
              Object {
                "marginBottom": 66,
                "minHeight": 200,
                "minWidth": 200,
              },
            ]
          }
        />
      </View>
      <View>
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
            ]
          }
        >
          Biometry.EnabledText1
        </Text>
        <Text />
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
            ]
          }
        >
          Biometry.EnabledText2
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "bold",
                },
              ]
            }
          >
             
            Biometry.Warning
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginVertical": 20,
          }
        }
      >
        <View
          style={
            Object {
              "flexShrink": 1,
              "justifyContent": "center",
              "marginRight": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "bold",
                },
              ]
            }
          >
            Biometry.UseToUnlock
          </Text>
        </View>
        <View
          style={
            Object {
              "justifyContent": "center",
            }
          }
        >
          <RCTSwitch
            accessibilityLabel="Biometry.Toggle"
            accessibilityRole="switch"
            disabled={false}
            onChange={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            onTintColor="rgba(53, 130, 63, 0.35)"
            style={
              Array [
                Object {
                  "height": 31,
                  "width": 51,
                },
                Object {
                  "backgroundColor": "#D3D3D3",
                  "borderRadius": 16,
                },
              ]
            }
            testID="com.ariesbifold:id/ToggleBiometrics"
            thumbTintColor="#42803E"
            tintColor="#D3D3D3"
            value={true}
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "margin": 20,
        "marginTop": "auto",
      }
    }
  >
    <View
      accessibilityLabel="Continue"
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(53, 130, 63, 0.35)",
          "borderRadius": 4,
          "opacity": 1,
          "padding": 16,
        }
      }
      testID="com.ariesbifold:id/Continue"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "bold",
                "textAlign": "center",
              },
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "bold",
                "textAlign": "center",
              },
            ]
          }
        >
          Continue
        </Text>
      </View>
    </View>
  </View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  >
    <RNCSafeAreaView>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#000000",
              "height": "100%",
              "padding": 20,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "default": "",
            }
          }
          style={
            Object {
              "alignSelf": "center",
              "height": "33%",
              "marginBottom": 20,
              "resizeMode": "contain",
              "width": "33%",
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              Object {
                "alignSelf": "center",
                "marginBottom": 16,
              },
            ]
          }
        >
          PinEnter.EnterPIN
        </Text>
        <View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  },
                  Object {
                    "marginBottom": 24,
                  },
                ]
              }
            >
              <View
                onLayout={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#313132",
                      "borderColor": "#313132",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "height": 48,
                      "marginRight": 8,
                      "width": 40,
                    },
                    false,
                  ]
                }
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 26,
                        "fontWeight": "bold",
                        "lineHeight": 42,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                onLayout={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#313132",
                      "borderColor": "#313132",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "height": 48,
                      "marginRight": 8,
                      "width": 40,
                    },
                    false,
                  ]
                }
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 26,
                        "fontWeight": "bold",
                        "lineHeight": 42,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                onLayout={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#313132",
                      "borderColor": "#313132",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "height": 48,
                      "marginRight": 8,
                      "width": 40,
                    },
                    false,
                  ]
                }
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 26,
                        "fontWeight": "bold",
                        "lineHeight": 42,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                onLayout={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#313132",
                      "borderColor": "#313132",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "height": 48,
                      "marginRight": 8,
                      "width": 40,
                    },
                    false,
                  ]
                }
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 26,
                        "fontWeight": "bold",
                        "lineHeight": 42,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                onLayout={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#313132",
                      "borderColor": "#313132",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "height": 48,
                      "marginRight": 8,
                      "width": 40,
                    },
                    false,
                  ]
                }
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 26,
                        "fontWeight": "bold",
                        "lineHeight": 42,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                onLayout={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#313132",
                      "borderColor": "#313132",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "height": 48,
                      "marginRight": 8,
                      "width": 40,
                    },
                    false,
                  ]
                }
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 26,
                        "fontWeight": "bold",
                        "lineHeight": 42,
                        "textAlign": "center",
                        "textAlignVertical": "center",
                      },
                    ]
                  }
                >
                  
                </Text>
              </View>
              <TextInput
                accessibilityLabel="PinEnter.EnterPIN"
                accessible={true}
                autoCapitalize="characters"
                autoCorrect={false}
                autoFocus={true}
                blurOnSubmit={false}
                caretHidden={true}
                clearButtonMode="never"
                disableFullscreenUI={true}
                keyboardType="numeric"
                maxLength={6}
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                onPressOut={[Function]}
                spellCheck={false}
                style={
                  Object {
                    "bottom": 0,
                    "fontSize": 1,
                    "left": 0,
                    "opacity": 0.01,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                testID="com.ariesbifold:id/EnterPIN"
                textContentType="password"
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
            <View
              accessibilityLabel="PinCreate.Show"
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "marginBottom": 32,
                  "marginRight": 8,
                  "opacity": 1,
                }
              }
              testID="com.ariesbifold:id/Show"
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 30,
                    },
                    undefined,
                    Object {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "margin": 20,
            "marginBottom": 10,
            "marginTop": "auto",
          }
        }
      >
        <View
          accessibilityLabel="PinEnter.Unlock"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#42803E",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/Enter"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                ]
              }
            >
              PinEnter.Unlock
            </Text>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </Modal>
</RNCSafeAreaView>
`;
